# PySigur

./: README.md  pyproject.toml
pysigur/: .gitignore  __init__.py  errors.py  exceptions.py  models.py  pysigur.py
pysigur.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
